[workspace]
members = [
    "day_1_2022",
    "day_1_2023",
    "day_2_2023",
    "day_3_2023",
    "day_4_2023",
    "day_5_2023",
    "day_6_2023"
]
resolver = "2"

[workspace.dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[build]
rustflags = ["-C", "target-cpu=native"]